--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
-/* /// color pallate for the project */
-/* CSS HEX */
---white: #FEFEFEff;
---alabaster: #DEE6DAff;
+:root{
+--white: #FFFFFFff;
 --celadon: #B6D8A0ff;
+--pistachio: #88CA5Eff;
 --silver: #A4A5A3ff;
---dim-gray: #656764ff;
+--white-2: #FFFFFFff;
+}
