--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,15 +10,18 @@
 
 #main-container {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
+
 }
+
 #meal-search-questionnaire {
   width: 50%;
   margin: 20px 20px 20px 20px;
 }
 #tdee-questionnaire {
   width: 50%;
-  margin: 20px 20px 20px 20px;
+  margin: 20px;
 }
 
 #home-page {
@@ -26,9 +29,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    max-width: 80vw;
     height: 100vh;
     text-align: center;
-    margin-left: 20%;
+  }
+
+  .body-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    max-width: 80vw;
+    height: 100vh;
+    text-align: center;
   }
   
   .home-page-title {
