--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,3 +169,21 @@ span {
 .dropdown-container.show .dropdown-options {
   display: block;
 }
+
+.tdee-questionnaire-height {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.tdee-questionnaire-height label {
+
+.tdee-questionnaire-height input {
+  margin: .25rem;
+  padding: .25rem;
+  border-radius: 10px;
+  border: 1px solid var(--dark-grey);
+  box-shadow: 0 0 10px var(--dark-grey);
+}
